--- a/deployment.yml
+++ b/deployment.yml
@@ -8,33 +8,33 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: debug-app
+      app: debug-apps
   template:
     metadata:
       labels:
         app: debug-app
     spec:
       containers:
-      - name: main-container
-        image: nginx:1.27.1
-        ports:
-        - containerPort: 8080
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-          limits:
-            cpu: 50m
-            memory: 64Mi
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 10
-          periodSeconds: 5
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 15
-          periodSeconds: 10
+        - name: main-container
+          image: nginx:1.27.1
+          ports:
+            - containerPort: 8080
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 50m
+              memory: 64Mi
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 10
